# semdex

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
docs/plans/: 2026-03-21-01-semdex-design.md  2026-03-21-02-semdex-implementation.md  2026-03-21-02-semdex-implementation.worklog.md
docs/superpowers/plans/: 2026-03-24-resume-functionality.md  2026-03-25-parallelize-indexing.md
docs/superpowers/specs/: 2026-03-24-resume-functionality-design.md  2026-03-25-parallelize-indexing-design.md
semdex-skill/: SKILL.md
semdex-skill/evals/: evals.json
src/semdex/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  git.py  hooks.py  indexer.py  server.py  store.py
tests/: test_chunker.py  test_chunker_treesitter.py  test_cli.py  test_config.py  test_e2e.py  test_embeddings.py  test_git.py  test_hooks.py  test_indexer.py  test_indexer_pipeline.py  test_resume_integration.py  test_server.py  test_store.py
